# lmgd

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp
etc/: LMG670.json  LMG95.json  channels.json  device.json  local.json
include/lmgd/: data.hpp  except.hpp  log.hpp  time.hpp
include/lmgd/device/: channel.hpp  device.hpp  track.hpp  types.hpp
include/lmgd/network/: async_binary_line_reader.hpp  async_line_reader.hpp  callback.hpp  connection.hpp  data.hpp  network_socket.hpp  serial_socket.hpp  socket.hpp
include/lmgd/parser/: list.hpp
include/lmgd/source/: metric.hpp  source.hpp
lib/: CMakeLists.txt
lib/json/: CMakeLists.txt
src/: interactive.cpp  main.cpp  module.cpp  socket.cpp
src/device/: channel.cpp  device.cpp  track.cpp
src/network/: connection.cpp  network_socket.cpp  serial_socket.cpp  socket.cpp
src/source/: log.cpp  source.cpp
